Rewrite task 29